--- a/example/app/package.json
+++ b/example/app/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "babel-eslint": "^7.1.1",
     "css-loader": "^0.26.1",
+    "draft-js": "^0.10.0",
     "eslint": "^3.14.1",
     "eslint-plugin-react": "^6.9.0",
     "react": "^15.4.2",
