--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
+    "css-loader": "^0.26.1",
+    "draft-js": "^0.10.0",
     "flow-bin": "^0.37.4",
     "grommet": "^1.2.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "rimraf": "^2.5.4",
+    "style-loader": "^0.13.1",
     "webpack": "^2.2.0"
   },
   "devDependencies": {
